# Cardinal

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
CMake/: CMakeConfigDirectory.cmake  CMakeConfigFunction.cmake  CMakeConfigGlobal.cmake
Engine/: CMakeLists.txt
Engine/Source/: CMakeLists.txt
Engine/Source/Runtime/: CMakeLists.txt  Main.cpp
Engine/Source/Runtime/Core/: Core.cpp
Engine/UnitTest/: CMakeLists.txt
Engine/UnitTest/Runtime/: CMakeLists.txt  FooTest.cpp
